Trying to fix insite links

--- a/contact.html
+++ b/contact.html
@@ -13,11 +13,11 @@
         <!-- The top bar with the social links -->
         <div class="navigationWrapper">
             <ul class="navBar" id="topNavigation">
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="http://blog.gunherogame.com">Dev Blog</a></li>
                 <li><a href="https://twitter.com/tyyppi_77">Twitter</a></li>
                 <li class="active"><a href="#">Contact</a></li>
-                <li><a href="/press.html">Press</a></li>
+                <li><a href="press.html">Press</a></li>
                 <li class="icon"><a href="javascript:void(0);" onclick="navigationMenu()">&#9776;</a></li>
             </ul>
         </div>
