--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="http://blog.gunherogame.com">Dev Blog</a></li>
                 <li><a href="https://twitter.com/tyyppi_77">Twitter</a></li>
-                <li><a href="/contact.html">Contact</a></li>
-                <li><a href="/press.html">Press</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="press.html">Press</a></li>
                 <li class="icon"><a href="javascript:void(0);" onclick="navigationMenu()">&#9776;</a></li>
             </ul>
         </div>
