--- a/press.html
+++ b/press.html
@@ -13,10 +13,10 @@
         <!-- The top bar with the social links -->
         <div class="navigationWrapper">
             <ul class="navBar" id="topNavigation">
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="http://blog.gunherogame.com">Dev Blog</a></li>
                 <li><a href="https://twitter.com/tyyppi_77">Twitter</a></li>
-                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
                 <li class="active"><a href="#">Press</a></li>
                 <li class="icon"><a href="javascript:void(0);" onclick="navigationMenu()">&#9776;</a></li>
             </ul>
