Fixed my age on the press page

--- a/press.html
+++ b/press.html
@@ -177,7 +177,7 @@
                 
                 <h2>About Olli-Samuli Lehmus:</h2>
                 <p>
-                Olli-Samuli Lehmus is a Finnish 18-year-old high school student who got into programming a little over five years ago. GunHero is Olli-Samuli's first commercial game project.
+                Olli-Samuli Lehmus is a Finnish hobbyist game-developer born in 1998. GunHero is Olli-Samuli's first commercial game project.
                 </p>
                 
                 <h2>Contact:</h2>
